chore(Build): set explicit dependencies for JAXB api and engine.